<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundapp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sgin_in_here"
        android:textColor="#EFECEC"
        android:gravity="center"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textAppearance="?android:textAppearanceMediumInverse"
        android:layout_gravity="center"
        android:id="@+id/text"
        ></TextView>

    <EditText
        android:textAppearance="?android:textAppearanceMediumInverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:drawableStart="@drawable/profile"
        android:textColor="#EFECEC"
        android:layout_margin="10dp"
        android:textColorHint="#FAFAFA"
        android:background="@drawable/box"
        android:padding="10dp"
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:autofillHints=""></EditText>
    <EditText

        android:textAppearance="?android:textAppearanceMediumInverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColor="#EFECEC"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:drawableStart="@drawable/pass"
        android:textColorHint="#EFECEC"
        android:background="@drawable/box"
        android:padding="10dp"
        android:id="@+id/password"
        android:autofillHints=""></EditText>
    <Button
        android:textAppearance="?android:textAppearanceMediumInverse"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/box"
        android:layout_margin="10dp"
        android:text="@string/sgin_in"
        android:id="@+id/btnsginin"
        android:textColor="#EFECEC"
        ></Button>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#EFECEC"
        android:gravity="center"
        android:textAppearance="?android:textAppearanceMediumInverse"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:id="@+id/sginup"
        ></TextView>





</LinearLayout>